[gd_scene load_steps=2 format=3 uid="uid://1p6kltp3g0we"]

[ext_resource type="Script" uid="uid://dum021trq7skw" path="res://scenes/menu/save_entry.gd" id="1_ten3r"]

[node name="SaveEntry" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
script = ExtResource("1_ten3r")

[node name="Info" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="Info"]
layout_mode = 2
theme_override_font_sizes/font_size = 32

[node name="CTime" type="Label" parent="Info"]
layout_mode = 2

[node name="MTime" type="Label" parent="Info"]
layout_mode = 2

[node name="Select" type="Button" parent="."]
layout_mode = 2

[node name="Delete" type="Button" parent="."]
layout_mode = 2

[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
